# haskell-polysemy-playground

./: .gitignore  LICENSE  Readme.md  polytest.cabal  stack.yaml
src/example3/: Main.hs
src/guessinggame/: Main.hs
