name:           polytest
version:        0.1.0.0
description:    Please see Readme.md
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.24

extra-source-files:
    Readme.md

executable guessinggame
  main-is: Main.hs
  other-modules:
      Paths_polytest
  hs-source-dirs:
      src/guessinggame
  default-extensions: DataKinds FlexibleContexts GADTs LambdaCase PolyKinds RankNTypes ScopedTypeVariables TypeApplications TypeOperators TypeFamilies
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -O2 -flate-specialise -fspecialise-aggressively
  build-depends:
      base >=4.7 && <5
    , polysemy >= 1.0
    , random
  default-language: Haskell2010
